# hyperliquid-sdk

./: .gitignore  README.md  context7.json
go/: README.md  go.mod  go.sum
go/examples/approve/: main.go
go/examples/builder_fee/: main.go
go/examples/cancel_all/: main.go
go/examples/cancel_by_cloid/: main.go
go/examples/cancel_order/: main.go
go/examples/close_position/: main.go
go/examples/evm_basics/: main.go
go/examples/evm_example/: main.go
go/examples/fluent_builder/: main.go
go/examples/full_demo/: main.go
go/examples/grpc_streaming/: go.sum  main.go
go/examples/hip3_order/: main.go
go/examples/hypercore_blocks/: main.go
go/examples/hypercore_example/: main.go
go/examples/info_batch_queries/: main.go
go/examples/info_candles/: main.go
go/examples/info_example/: main.go
go/examples/info_market_data/: main.go
go/examples/info_user_data/: go.mod  main.go
go/examples/info_vaults/: main.go
go/examples/isolated_margin/: main.go
go/examples/leverage/: main.go
go/examples/market_order/: main.go
go/examples/markets/: main.go
go/examples/modify_order/: main.go
go/examples/open_orders/: main.go
go/examples/place_order/: main.go
go/examples/preflight/: main.go
go/examples/roundtrip/: main.go
go/examples/schedule_cancel/: main.go
go/examples/staking/: main.go
go/examples/stream_grpc/: main.go
go/examples/stream_l2_book/: main.go
go/examples/stream_l4_book/: main.go
go/examples/stream_orderbook/: main.go
go/examples/stream_trades/: main.go
go/examples/stream_websocket_all/: main.go
go/examples/trading_example/: main.go
go/examples/transfers/: main.go
go/examples/trigger_orders/: main.go
go/examples/twap/: main.go
go/examples/vaults/: main.go
go/examples/websocket_streaming/: main.go
go/examples/withdraw/: main.go
go/hyperliquid/: errors.go  errors_test.go  evm.go  evm_stream.go  grpc_stream.go  http.go  hypercore.go  info.go  integration_test.go  order.go  order_test.go  sdk.go  sdk_extended.go  sdk_test.go  signing.go  stream.go  trigger_order.go  types.go  types_test.go
go/hyperliquid/proto/: orderbook.pb.go  orderbook.proto  orderbook_grpc.pb.go  streaming.pb.go  streaming.proto  streaming_grpc.pb.go
python/: LICENSE  README.md  pyproject.toml
python/examples/: approve.py  builder_fee.py  cancel_all.py  cancel_by_cloid.py  cancel_order.py  close_position.py  evm_basics.py  evm_example.py  fluent_builder.py  full_demo.py  grpc_streaming.py  hip3_order.py  hypercore_blocks.py  hypercore_example.py  info_batch_queries.py  info_candles.py  info_example.py  info_market_data.py  info_user_data.py  info_vaults.py  isolated_margin.py  leverage.py  market_order.py  markets.py  modify_order.py  open_orders.py  place_order.py  preflight.py  requirements.txt  roundtrip.py  schedule_cancel.py  staking.py  stream_grpc.py  stream_l2_book.py  stream_l4_book.py  stream_orderbook.py  stream_trades.py  stream_websocket_all.py  trading_example.py  transfers.py  (+5 more)
python/hyperliquid_sdk/: __init__.py  client.py  errors.py  evm.py  evm_stream.py  grpc_stream.py  hypercore.py  info.py  order.py  websocket.py
python/hyperliquid_sdk/proto/: __init__.py  orderbook.proto  orderbook_pb2.py  orderbook_pb2_grpc.py  streaming.proto  streaming_pb2.py  streaming_pb2_grpc.py
python/tests/: __init__.py  conftest.py  test_hypercore.py  test_info.py  test_order.py  test_sdk.py  test_websocket.py
rust/: Cargo.toml  README.md  build.rs
rust/examples/: Cargo.toml  approve.rs  builder_fee.rs  cancel_all.rs  cancel_by_cloid.rs  cancel_order.rs  close_position.rs  evm_basics.rs  evm_example.rs  fluent_builder.rs  full_demo.rs  grpc_streaming.rs  hip3_order.rs  hypercore_blocks.rs  hypercore_example.rs  info_batch_queries.rs  info_candles.rs  info_example.rs  info_market_data.rs  info_user_data.rs  info_vaults.rs  isolated_margin.rs  leverage.rs  market_order.rs  markets.rs  modify_order.rs  open_orders.rs  place_order.rs  preflight.rs  roundtrip.rs  schedule_cancel.rs  staking.rs  stream_grpc.rs  stream_l2_book.rs  stream_l4_book.rs  stream_orderbook.rs  stream_trades.rs  stream_websocket_all.rs  trading_example.rs  transfers.rs  (+5 more)
rust/src/: client.rs  error.rs  evm.rs  evm_stream.rs  grpc.rs  hypercore.rs  info.rs  lib.rs  order.rs  signing.rs  stream.rs  types.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.examples.json  tsconfig.json  tsup.config.ts
typescript/examples/: approve.ts  builder_fee.ts  cancel_all.ts  cancel_by_cloid.ts  cancel_order.ts  close_position.ts  evm_basics.ts  evm_example.ts  fluent_builder.ts  full_demo.ts  grpc_streaming.ts  hip3_order.ts  hypercore_blocks.ts  hypercore_example.ts  info_batch_queries.ts  info_candles.ts  info_example.ts  info_market_data.ts  info_user_data.ts  info_vaults.ts  isolated_margin.ts  leverage.ts  market_order.ts  markets.ts  modify_order.ts  open_orders.ts  package.json  place_order.ts  preflight.ts  roundtrip.ts  schedule_cancel.ts  staking.ts  stream_grpc.ts  stream_l2_book.ts  stream_l4_book.ts  stream_orderbook.ts  stream_trades.ts  stream_websocket_all.ts  trading_example.ts  transfers.ts  (+6 more)
typescript/src/: client.ts  errors.ts  evm-stream.ts  evm.ts  grpc-stream.ts  hypercore.ts  index.ts  info.ts  order.ts  types.ts  websocket.ts
typescript/src/proto/: orderbook.proto  streaming.proto
