[package]
name = "quicknode-hyperliquid-sdk"
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["QuickNode <support@quicknode.com>"]
description = "Hyperliquid SDK for Rust - Simple, performant trading client. HyperCore, HyperEVM, WebSocket and gRPC streams."
documentation = "https://docs.rs/quicknode-hyperliquid-sdk"
homepage = "https://hyperliquidapi.com"
repository = "https://github.com/quiknode-labs/hyperliquid-sdk"
keywords = ["hyperliquid", "trading", "defi", "crypto", "sdk"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

# Keep this crate out of the workspace
[workspace]

[lib]
name = "hyperliquid_sdk"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
rmp-serde = "1.3"

# Crypto / Ethereum
alloy = { version = "1.0", features = ["full", "signer-local"] }
rust_decimal = { version = "1.36", features = ["serde-str"] }

# gRPC
tonic = { version = "0.12", features = ["tls", "tls-native-roots", "zstd"] }
prost = "0.13"

# Utilities
chrono = "0.4"
thiserror = "2.0"
either = { version = "1.13", features = ["serde"] }
url = "2.5"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "6.1"
hex = "0.4"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
